--- a/src/apps/whisper/templates/whisper/emailnotification_list.html
+++ b/src/apps/whisper/templates/whisper/emailnotification_list.html
@@ -1,4 +1,4 @@
-{% extends 'base_content.html' %}
+{% extends 'base.html' %}
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 {% load core_tags %}
@@ -15,48 +15,76 @@
 {% block content %}
     <div class="row">
         <div class="col-12">
+            <div class="page-title-box">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p class="mb-0 font-size-24">
+                            Emails Report
+                        </p>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div class="row justify-content-between">
+        <div class="col-12 col-md-12 p-2 mt-2">
             <form method="get">
                 <div class="input-group mb-3">
-                    {{ filter_form }}
-                    <div class="input-group-append">
-                        <button class="btn btn-lg d-block btn-outline-theme" type="submit">
-                            <i class="fa fa-search"></i> Search
-                        </button>
-                    </div>
-                </div>
-            </form>
+                    <input type="text" class="form-control " placeholder="Enter Recipient Name"
+                           id="id_recipient"
+                           value="{% if filter_form.recipient.value %}{{ filter_form.recipient.value }}{% endif %}"
+                           name="recipient">
+                    <select name="status" class="form-control" id="id_status">
+                        <
+                        <option value="" {% if filter_form.status.value == "" %}selected{% endif %}>---------</option>
+                        <option value="pending" {% if filter_form.status.value == "pending" %}selected{% endif %}>
+                            Pending
+                        </option>
+                        <option value="sent" {% if filter_form.status.value == "sent" %}selected{% endif %}>Sent
+                        </option>
+                        <option value="failed" {% if filter_form.status.value == "failed" %}selected{% endif %}>Failed
+                        </option>
+                        <option value="retry" {% if filter_form.status.value == "retry" %}selected{% endif %}>Retry
+                        </option>
 
+                    </select>
+                    <button class="btn btn-secondary" type="submit"><i class="fas fa-search"></i></button>
+                    <a class="btn btn-danger" href="{% url 'whisper:emailnotification-list' %}">
+                        <i class="fas fa-brush"></i>
+                    </a>
+                </div>
+
+            </form>
         </div>
     </div>
 
-
     <div class="row">
         <div class="col-md-12">
-            <div class="card border-0">
-                <div class="card-body px-0">
-                    <div class="table-responsive">
-                        <table class="table table-hover table-borderless">
-                            {% if object_list %}
-                                <thead class="border-bottom">
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Subject</th>
-                                    <th>Recipient</th>
-                                    <th>Status</th>
-{#                                    <th>Failed Attempts</th>#}
-                                    <th>Created at</th>
-                                    <th>Active</th>
-                                </tr>
-                                </thead>
+            <div class="card shadow-lg">
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead class="thead-light">
+                        <tr>
+                            <th>ID</th>
+                            <th>Subject</th>
+                            <th>Recipient</th>
+                            <th>Status</th>
+                            <th>Failed Attempts</th>
+                            <th>Created at</th>
+                            <th>Active</th>
+                        </tr>
+                        </thead>
 
-                                <tbody>
+                        <tbody>
 
-                                {% for object in object_list %}
-                                    <tr>
-                                        <td>{{ object.pk }}</td>
-                                        <td>{{ object.subject }}</td>
-                                        <td>{{ object.recipient }}</td>
-                                        <td>
+                        {% for object in object_list %}
+                            <tr>
+                                <td>{{ object.pk }}</td>
+                                <td>{{ object.subject }}</td>
+                                <td>{{ object.recipient }}</td>
+                                <td>
                                             <span class="badge bg-{{ object.status|alert_type_class }}">
                                                 <b>
                                                     {% if object.status == "sent" %}
@@ -69,39 +97,36 @@
 
                                             </span>
 
-                                            {% if object.status == 'failed' %}
-                                                 | <i class="fa fa-eye text-danger"
-                                                   data-object-value="{{ object.error_message }}"
-                                                   onclick="showError(this)"></i>
-                                            {% endif %}
-                                        </td>
+                                    {% if object.status == 'failed' %}
+                                        | <i class="fa fa-eye text-danger"
+                                             data-object-value="{{ object.error_message }}"
+                                             onclick="showError(this)"></i>
+                                    {% endif %}
+                                </td>
 
-{#                                        <td class="text-center">{{ object.failed_attempts }}</td>#}
-                                        <td>{{ object.created_at.date|check_null }}</td>
-
-
-                                        <td>
-                                            {% if request.user.is_superuser or perms.whisper.change_emailnotification %}
-
-                                                <a href="{% url 'whisper:emailnotification-retry' object.pk %}"
-                                                   class="text-decoration-none"><i
-                                                        class="fa fa-repeat"></i> Retry
-                                                </a>
-                                            {% else %}
-                                                -
-                                            {% endif %}
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-
-                                </tbody>
-                            {% else %}
-                                <th class="text-danger">No Emails data available.</th>
-                            {% endif %}
-                        </table>
-                    </div>
+                                <td class="text-center">{{ object.failed_attempts }}</td>
+                                <td>{{ object.created_at.date|check_null }}</td>
 
 
+                                <td>
+                                    {% if request.user.is_superuser or perms.whisper.change_emailnotification %}
+
+                                        <a href="{% url 'whisper:emailnotification-retry' object.pk %}"
+                                           class="text-decoration-none"><i
+                                                class="fa fa-repeat"></i> Retry
+                                        </a>
+                                    {% else %}
+                                        -
+                                    {% endif %}
+                                </td>
+                            </tr>
+                        {% empty %}
+                            <tr>
+                                <td colspan="5" class="text-danger">No email found .</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
@@ -112,7 +137,7 @@
             <div class="mt-4">
                 <ul class="pagination">
                     {% if object_list.has_previous %}
-                        <li>
+                        <li class="page-link rounded">
                             <span>
                                 <a href="{% relative_url object_list.previous_page_number 'page' request.GET.urlencode %}">
                                     Previous
@@ -120,11 +145,13 @@
                             </span>
                         </li>
                     {% endif %}
-                    <li class="">
+                    &nbsp;&nbsp;&nbsp;
+                    <li class="page-link rounded">
                         <span>Page {{ object_list.number }} of {{ object_list.paginator.num_pages }}.</span>
                     </li>
+                    &nbsp;&nbsp;&nbsp;
                     {% if object_list.has_next %}
-                        <li>
+                        <li class="page-link rounded">
                             <span>
                                 <a href="{% relative_url object_list.next_page_number 'page' request.GET.urlencode %}">
                                     Next
