--- a/src/web/admins/templates/admins/actor_list.html
+++ b/src/web/admins/templates/admins/actor_list.html
@@ -6,30 +6,45 @@
 {% block subtitle %} {{ request.user }} {% endblock %}
 
 {% block content %}
-<div class="row justify-content-between">
-    <div class="col-6 col-md-4 p-2 mt-2">
-        <form method="get">
-            <div class="input-group mb-3">
-                <input type="text" class="form-control " placeholder="Enter Actor Name"
-                       id="id_tag" name="name" aria-describedby="search-button">
-                <button class="btn btn-secondary" type="submit" id="search-button">
-                    <i class="fas fa-search"></i>
-                </button>
-                <a href="{% url 'admins:actor-list' %}" class="btn btn-danger ml-2" id="clear-button">
-                    <i class="fas fa-brush"></i>
-                </a>
+    <div class="row">
+        <div class="col-12">
+            <div class="page-title-box">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p class="mb-0 font-size-24">
+                            Actor Management
+                        </p>
+                    </div>
+                    <div class="col-sm-6 text-right">
 
+                        <button type="button" class="btn btn-primary mb-1"
+                                onclick="window.location.href='{% url 'admins:actor-create' %}'">
+                          <i class="fa fa-plus"></i>   Add Actor
+                        </button>
+
+                    </div>
+                </div>
 
             </div>
-        </form>
+        </div>
     </div>
-    <div class="col-4 mt-0 pt-0 mb-2 d-flex align-items-center justify-content-end">
-        <button type="button" class="btn btn-primary mb-1"
-                onclick="window.location.href='{% url 'admins:actor-create' %}'">
-            Add Actor
-        </button>
+ <div class="row justify-content-between">
+        <div class="col-12 col-md-12 p-2 mt-2">
+            <form method="get">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control " placeholder="Enter Actor Name"
+                           id="id_name"
+                           value="{% if actor_filter_form.name.value %}{{ actor_filter_form.name.value }}{% endif %}"
+                           name="name">
+                    <button class="btn btn-secondary" type="submit"><i class="fas fa-search"></i></button>
+                    <a class="btn btn-danger" href="{% url 'admins:actor-list' %}">
+                        <i class="fas fa-brush"></i>
+                    </a>
+                </div>
+
+            </form>
+        </div>
     </div>
-</div>
 <div class="row">
     <div class="col-12">
         <div class="row">
