--- a/src/web/admins/templates/admins/include/admin_nav.html
+++ b/src/web/admins/templates/admins/include/admin_nav.html
@@ -119,7 +119,7 @@
                         <i class="bx-fw bx bxl-facebook-square font-size-16 align-middle mr-1"></i>Social Accounts
                     </a>
                     <div class="dropdown-divider"></div>
-{#                    <a class="dropdown-item text-primary" href="{% url 'accounts:logout' %}">#}
+                    <a class="dropdown-item text-primary" href="{% url 'account_logout' %}">
                         <i class="bx bx-power-off font-size-16 align-middle mr-1"></i> Logout
                     </a>
                 </div>
