--- a/src/web/admins/templates/admins/user_list.html
+++ b/src/web/admins/templates/admins/user_list.html
@@ -8,139 +8,163 @@
 
 {% block content %}
 
-    <div class="row">
-        <div class="col-12">
-            <form method="get">
-                <div class="input-group mb-3">
-                    {{ user_filter_form }}
-                    <div class="input-group-append">
-                        <button class="btn btn-primary" type="submit">
-                            <i class="fa fa-search"></i> Search
-                        </button>
-                    </div>
+<div class="row">
+    <div class="col-12">
+        <div class="page-title-box">
+            <div class="row">
+                <div class="col-sm-6">
+                    <p class="mb-0 font-size-24">
+                        User Management
+                    </p>
                 </div>
-            </form>
+            </div>
+
         </div>
     </div>
+</div>
+<div class="row justify-content-between">
+    <div class="col-12 col-md-12 p-2 mt-2">
+        <form method="get">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control " placeholder="Enter Username Name"
+                       id="id_username"
+                       value="{% if user_filter_form.name.value %}{{ user_filter_form.username.value }}{% endif %}"
+                       name="username">
+                <input type="text" class="form-control " placeholder="Enter First Name"
+                       id="id_first_name"
+                       value="{% if user_filter_form.first_name.value %}{{ user_filter_form.first_name.value }}{% endif %}"
+                       name="first_name">
+                <input type="text" class="form-control " placeholder="Enter Last Name"
+                       id="id_last_name"
+                       value="{% if user_filter_form.last_name.value %}{{ user_filter_form.last_name.value }}{% endif %}"
+                       name="last_name">
+                <input type="text" class="form-control " placeholder="Enter Email"
+                       id="id_email"
+                       value="{% if user_filter_form.email.value %}{{ user_filter_form.email.value }}{% endif %}"
+                       name="email">
+                <button class="btn btn-secondary" type="submit"><i class="fas fa-search"></i></button>
+                <a class="btn btn-danger" href="{% url 'admins:language-list' %}">
+                    <i class="fas fa-brush"></i>
+                </a>
+            </div>
+
+        </form>
+    </div>
+</div>
 
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="card">
-                <div class="card-body">
+<div class="row">
+    <div class="col-md-12">
+        <div class="card shadow-lg rounded-lg">
+            <div class="card-body">
 
 
-                    <div class="table-responsive">
-                        <table class="table table-borderless">
-                            {% if user_list %}
-                                <thead class="border-bottom">
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Name</th>
-                                    <th>Username</th>
-                                    <th>Email</th>
-                                    <th>
-                                        Package
-                                    </th>
-                                    <th>Referred By</th>
-                                    <th>Active</th>
-                                    <th>Action</th>
-                                </tr>
-                                </thead>
+                <div class="table-responsive">
+                    <table class="table table-borderless">
+                        <thead class="border-bottom">
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Username</th>
+                            <th>Email</th>
+                            <th>
+                                User Type
+                            </th>
+                            <th>Is superuser</th>
+                            <th>Is staff</th>
+                            <th>Is active</th>
+                            <th>Action</th>
+                        </tr>
+                        </thead>
 
-                                <tbody>
+                        <tbody>
 
-                                {% for user in user_list %}
-                                    <tr>
-                                        <td>{{ user.pk }}</td>
-                                        <td>{{ user.first_name }} {{ user.last_name }}</td>
-                                        <td>{{ user.username }}</td>
-                                        <td>{{ user.email }}</td>
-                                        <td>
-                                            {% if not user.current_subscription %}
-                                                <b class="text-danger"><i class="fa fa-times-circle"></i> Free</b>
-                                            {% else %}
-                                                <b class="text-success">
-                                                    <i class="fa fa-check-circle"></i> {{ user.current_subscription.package.name }}
-                                                </b>
-                                            {% endif %}
-                                        </td>
-                                        <td>
+                        {% for user in user_list %}
+                        <tr>
+                            <td>{{ user.pk }}</td>
+                            <td>{{ user.first_name }} {{ user.last_name }}</td>
+                            <td>{{ user.username }}</td>
+                            <td>{{ user.email }}</td>
+                            <td>{{ user.user_type }}</td>
+                            <td>
+                                {% if user.is_superuser %}
+                                    <b class="text-success"><i class="fa fa-check-circle"></i></b>
 
-                                            {% if user.referred_by %}
-                                                <b>
-                                                    <a href="{% url 'admins:user-detail' user.referred_by.pk %}">
-                                                        {{ user.referred_by.username }}
-                                                    </a>
-                                                </b>
-                                            {% else %}
-                                                <b class="text-danger">
-                                                    None
-                                                </b>
-                                            {% endif %}
+                                {% else %}
+                                    <b class="text-danger"><i class="fa fa-times-circle"></i></b>
 
-                                        </td>
-                                        <td>
-                                            {% if user.is_active %}
-                                                <b class="text-success"><i class="fa fa-check-circle"></i></b>
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if user.is_staff %}
+                                    <b class="text-success"><i class="fa fa-check-circle"></i></b>
 
-                                            {% else %}
-                                                <b class="text-danger"><i class="fa fa-times-circle"></i></b>
+                                {% else %}
+                                    <b class="text-danger"><i class="fa fa-times-circle"></i></b>
 
-                                            {% endif %}
-                                        </td>
+                                {% endif %}
+                            </td>
+                            <td>
+                                {% if user.is_active %}
+                                    <b class="text-success"><i class="fa fa-check-circle"></i></b>
 
-                                        <td>
-                                            <a href="{% url 'admins:user-detail' user.pk %}"
-                                               class="text-decoration-none"><i
-                                                    class="mdi mdi-eye icon-sm"></i> View
-                                            </a>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
+                                {% else %}
+                                    <b class="text-danger"><i class="fa fa-times-circle"></i></b>
 
-                                </tbody>
-                            {% else %}
-                                <th class="text-danger">No users data available.</th>
-                            {% endif %}
-                        </table>
-                    </div>
+                                {% endif %}
+                            </td>
 
-
+                            <td>
+                                <a href="{% url 'admins:user-detail' user.pk %}"
+                                   class="text-decoration-none"><i
+                                        class="mdi mdi-eye icon-sm"></i> View
+                                </a>
+                            </td>
+                        </tr>
+                        {% empty %}
+                        <tr>
+                            <b>No users data available.</b>
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
+
+
             </div>
         </div>
     </div>
+</div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="mt-4">
-                <ul class="pagination">
-                    {% if user_list.has_previous %}
-                        <li>
+<div class="row">
+    <div class="col-md-12">
+        <div class="mt-4">
+            <ul class="pagination">
+                {% if user_list.has_previous %}
+                    <li>
                             <span>
                                 <a href="{% relative_url user_list.previous_page_number 'page' request.GET.urlencode %}">
                                     Previous
                                 </a>
                             </span>
-                        </li>
-                    {% endif %}
-                    <li class="">
-                        <span>Page {{ user_list.number }} of {{ user_list.paginator.num_pages }}.</span>
                     </li>
-                    {% if user_list.has_next %}
-                        <li>
+                {% endif %}
+                <li class="">
+                    <span>Page {{ user_list.number }} of {{ user_list.paginator.num_pages }}.</span>
+                </li>
+                {% if user_list.has_next %}
+                    <li>
                             <span>
                                 <a href="{% relative_url user_list.next_page_number 'page' request.GET.urlencode %}">
                                     Next
                                 </a>
                             </span>
-                        </li>
-                    {% endif %}
-                </ul>
-            </div>
+                    </li>
+                {% endif %}
+            </ul>
         </div>
     </div>
+</div>
 
 {% endblock %}
 
