--- a/src/web/admins/templates/admins/season_episode_form.html
+++ b/src/web/admins/templates/admins/season_episode_form.html
@@ -14,24 +14,14 @@
             <h1>Create Series</h1>
         {% endif %}
         <div class="mt-2">
-            <a href="{% url 'admins:drama-list' %}" class="mt-2 btn btn-sm btn-secondary">
+            <button onclick="window.history.back()" class="mt-2 btn btn-sm btn-secondary">
                 <i class="fa fa-arrow-left" aria-hidden="true"></i> Back to List
-            </a>
+            </button>
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-12 col-sm-12">
                 <div class="card shadow-lg">
                     <div class="card-body">
-                        <div class="mt-3">
-                            <div class="progress mt-3">
-                                <div id="progressBar" class="progress-bar bg-info" role="progressbar" style="width: 0%"
-                                     aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%
-                                </div>
-                            </div>
-                            <div class="mt-2">
-                                <h3 id="status"></h3>
-                            </div>
-                        </div>
                         <form method="post" enctype="multipart/form-data" novalidate>
                             {% csrf_token %}
                             {{ form.non_field_errors }}
