--- a/src/web/admins/templates/admins/season_episode_media_form.html
+++ b/src/web/admins/templates/admins/season_episode_media_form.html
@@ -11,9 +11,9 @@
     <div class="container">
         <h1>Update Media File</h1>
         <div class="mt-2">
-            <a href="{% url 'admins:drama-list' %}" class="mt-2 btn btn-sm btn-secondary">
+            <button  onclick="window.history.back()" class="mt-2 btn btn-sm btn-secondary">
                 <i class="fa fa-arrow-left" aria-hidden="true"></i> Back to List
-            </a>
+            </button>
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-12 col-sm-12">
