--- a/templates/account/include/auth_nav_footer.html
+++ b/templates/account/include/auth_nav_footer.html
@@ -22,7 +22,7 @@
             <div class="user-form-remind">
                 <p>
                     Go Back To<a href="{% url 'account_login' %}"><i class="fa fa-door-open"></i> login</a>
-                    -<a href="/"><i class="fa fa-home"></i> Home</a>
+                    -<a href="{% url 'website:home' %}"><i class="fa fa-home"></i> Home</a>
                 </p>
             </div>
         {% endif %}
