--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -23,7 +23,7 @@
                         {% endif %}
                     </div>
 
-                    <div class="card shadow">
+                    <div class="card shadow-lg rounded-lg">
                         <div class="card-body border-bottom text-center">
                             <p class="card-title m-0">{% trans "Password Reset" %}</p>
 
