--- a/src/web/admins/templates/admins/user_detail.html
+++ b/src/web/admins/templates/admins/user_detail.html
@@ -17,7 +17,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="card">
+            <div class="card shadow-lg rounded-lg">
                 <div class="card-body">
 
                     {# IMAGE DIV #}
@@ -99,7 +99,7 @@
     {# STATISTICS #}
     <div class="row">
         <div class="col-sm-12">
-            <div class="card">
+            <div class="card shadow-lg rounded-lg">
                 <div class="card-body border-bottom">
                     <p class="card-title mb-0">User Statistics</p>
                 </div>
