--- a/src/web/website/templates/website/include/header.html
+++ b/src/web/website/templates/website/include/header.html
@@ -60,8 +60,8 @@
                         </li>
                     </ul>
                     <div class="header-button mt-4">
-                        <a href="pricing.html" class="theme-btn text-center">
-                            subscribe
+                        <a href="{% url 'account_login' %}" class="theme-btn text-center">
+                            Login
                         </a>
                     </div>
                     <div class="social-icon d-flex align-items-center">
