--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -8,7 +8,7 @@
 {% block content %}
     <div class="row justify-content-center">
         <div class="col-sm-8 col-12">
-            <div class="card">
+            <div class="card shadow-lg rounded-lg">
                 <div class="card-body border-bottom">
                     <p class="card-title mb-0">{% trans "Related email addresses" %}</p>
                 </div>
