--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -20,7 +20,7 @@
 
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6 col-xl-6">
-                <div class="card">
+                <div class="card shadow-lg rounded-lg">
                     <div class="card-body">
                         <h1>{% trans "Confirm E-mail Address" %}</h1>
 
