--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -9,7 +9,7 @@
 
     <div class="row justify-content-center">
         <div class="col-12 col-sm-8">
-            <div class="card">
+            <div class="card shadow-lg rounded-lg">
 
                 <div class="card-body">
                     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
