--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -22,7 +22,7 @@
                             {% endif %}
                         </div>
                     </div>
-                    <div class="card shadow-lg">
+                    <div class="card shadow-lg rounded-lg">
                         <div class="card-body text-center border-bottom">
                             <p class="card-title m-0">{% trans "Password Reset" %}</p>
                         </div>
@@ -42,7 +42,7 @@
                 </div>
             </div>
 
-{#            {% include 'include/global-short-footer.html' %}#}
+            {% include 'include/global-short-footer.html' %}
 
         </div>
     </div>
