--- a/templates/account/verified_email_required.html
+++ b/templates/account/verified_email_required.html
@@ -21,7 +21,7 @@
                         {% endif %}
                     </div>
 
-                    <div class="card shadow">
+                    <div class="card shadow-lg rounded-lg">
                         <div class="card-body border-bottom text-center">
                             <p class="card-title m-0">{% trans "Verify Your E-mail Address" %}</p>
 
