--- a/templates/include/global-short-footer.html
+++ b/templates/include/global-short-footer.html
@@ -3,7 +3,7 @@
         <div class="text-center">
             <p class="mb-0">
                 <b>
-                    <a href="#"><i class="bx bx-home"></i> Home</a> &nbsp;-&nbsp;
+                    <a href="{% url 'website:home' %}"><i class="bx bx-home"></i> Home</a> &nbsp;-&nbsp;
                     <a href="#"><i class="bx bx-pen"></i> Terms and Conditions</a> &nbsp;-&nbsp;
                     <a href="#"><i class="bx bx-shield"></i> Privacy Policy</a>
                 </b>
