--- a/templates/include/global-short-footer.html
+++ b/templates/include/global-short-footer.html
@@ -4,8 +4,8 @@
             <p class="mb-0">
                 <b>
                     <a href="{% url 'website:home' %}"><i class="bx bx-home"></i> Home</a> &nbsp;-&nbsp;
-                    <a href="#"><i class="bx bx-pen"></i> Terms and Conditions</a> &nbsp;-&nbsp;
-                    <a href="#"><i class="bx bx-shield"></i> Privacy Policy</a>
+                    <a href="{% url 'website:privacy-policy' %}"><i class="bx bx-pen"></i> Terms and Conditions</a> &nbsp;-&nbsp;
+                    <a href="{% url 'website:terms-and-condition' %}"><i class="bx bx-shield"></i> Privacy Policy</a>
                 </b>
             </p>
         </div>
